# mvaled-github-io-sources

./: .dir-locals.el  .gitmodules  CLAUDE.md  Makefile  input.css  pelicanconf.py  publish.sh  pyproject.toml
content/: a-failing-fail-in-the-monad-list.rst  adding-code-is-easy.rst  all-things-distributed.rst  composing-iterator-returning-functions.rst  open-prompt.rst  performance-of-python-list-comprehensions.rst  python-parsec-experience-report.rst
content/2025/: adding-code-is-easy.rst  claude-codex.rst  omarchy.rst  reviving-this-blog.rst  starch.rst  viving.rst
content/2026/: llm.rst  starch-1password.rst
content/pages/: 01-about.rst  about.rst
theme/static/: style-202507061303.css  style-202507261729.css
theme/static/js/: section_anchor.js
theme/templates/: article.html  base.html  pagination.html
